--- a/todo-react/package.json
+++ b/todo-react/package.json
@@ -11,7 +11,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-icons": "^5.2.1",
+    "react-scripts": "^3.0.1",
+    "vite": "^5.2.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
